Import static resources, create common includes, fix sidebar, twitter link, partners, etc ...

--- a/_sidebar.liquid
+++ b/_sidebar.liquid
@@ -24,3 +24,16 @@
   <li><a href="http://www.autres-mondes.org/" title="Autres(M)Ondes">Autres(M)Ondes</a></li>
  </ul>
 </div>
+<div class="moduletable">
+ <h3>Archives Radio</h3>
+ <ul class="list">
+  <li><a href="http://radio-esperanzah-2009.bonnes-ondes.fr/" title="Radio Esperanzah! 2009">Edition 2009</a></li>
+  <li><a href="http://radio-esperanzah-2009.bonnes-ondes.fr/" title="Radio Esperanzah! 2008">Edition 2008</a></li>
+  <li><a href="http://2007.esperanzah.be/radio/" title="Radio Esperanzah! 2007">Edition 2007</a></li>
+  <li><a href="http://www.autres-mondes.org/evenements/2006/radio-esperanzah" title="Radio Esperanzah! 2006">Edition 2006</a></li>
+  <li><a href="http://www.autres-mondes.org/evenements/2005/radio-esperanzah" title="Radio Esperanzah! 2005">Edition 2005</a></li>
+  <li><a href="http://www.autres-mondes.org/evenements/2004/radio-esperanzah" title="Radio Esperanzah! 2004">Edition 2004</a></li>
+ </ul> 
+</div>
+ 
+
