--- a/_head.liquid
+++ b/_head.liquid
@@ -19,3 +19,4 @@
   <!--[if IE 8]> 
    <link href="{{theme.url_for_assets}}/css/ie8only.css" rel="stylesheet" type="text/css" />
   <![endif]-->
+  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/bonnesondes.css" type="text/css" />
