Regroup pixfactory stylesheets into a base.css and minify it

--- a/_head.liquid
+++ b/_head.liquid
@@ -2,12 +2,7 @@
   <meta name="keywords" content="radio, esperanzah, esperanzah!, festival, musique, floreffe, namur, belgique" />
   <meta name="description" content="La radio du festival Esperanzah! - le 5, 6, 7 et 8 août 2010" />
   <link href="{{theme.url_for_assets}}/media/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/template.css" type="text/css" />
-  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/position.css" type="text/css" media="screen,projection" />
-  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/layout.css" type="text/css" media="screen,projection" />
-  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/print.css" type="text/css" media="Print" />
-  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/general.css" type="text/css" />
-  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/fr-fr.css" type="text/css" />
+  <link rel="stylesheet" href="{{theme.url_for_assets}}/css/base-min.css" type="text/css" />
   <link rel="alternate" type="application/rss+xml" title="{{show.name}}" href="{{ show.url_for_podcast }}" />
   <!--[if lte IE 6]>
 	 <link href="{{theme.url_for_assets}}/css/ieonly.css" rel="stylesheet" type="text/css" />
