--- a/show.liquid
+++ b/show.liquid
@@ -35,6 +35,7 @@
      <div id="right">
       {% include 're2010/sidebar' %}
      </div>
+     {% include 're2010/program' %}
     </div>
     <div id="poupee-sax"></div>
     <div id="poupee-bras"></div>
