to infinity, and beyond

--- a/_head.liquid
+++ b/_head.liquid
@@ -14,4 +14,5 @@
   <!--[if IE 8]> 
    <link href="{{theme.url_for_assets}}/css/ie8only.css" rel="stylesheet" type="text/css" />
   <![endif]-->
+  <meta http-equiv="X-UA-Compatible" content="IE=8" />
   <link rel="stylesheet" href="{{theme.url_for_assets}}/css/bonnesondes.css" type="text/css" />
