--- a/_sidebar.liquid
+++ b/_sidebar.liquid
@@ -1,7 +1,12 @@
 <div class="moduletable">
  <div id="prog">
   <div id="prog-top"></div>
-  <div id="prog-middle"><a href="{{ show.url_for_podcast }}">Suivez la radio grâce au podcast !</a></div>
+  <div id="prog-middle">
+   <p>
+    <a href="{{ show.url_for_podcast }}">Suivez la radio grâce au podcast !</a> ~ 
+    <a href="/direct/">Ecoutez en direct !</a>
+   </p>
+  </div>
   <div id="prog-bottom"></div>
   <div id="prog-deco"></div>
  </div>
