this is the end my friend

--- a/_sidebar.liquid
+++ b/_sidebar.liquid
@@ -3,8 +3,7 @@
   <div id="prog-top"></div>
   <div id="prog-middle">
    <p>
-    <a href="{{ show.url_for_podcast }}">Suivez la radio grâce au podcast !</a> ~ 
-    <a href="/direct/">Ecoutez en direct !</a>
+    <a href="{{ show.url_for_podcast }}">Suivez la radio grâce au podcast !</a>
    </p>
   </div>
   <div id="prog-bottom"></div>
