--- a/css/bonnesondes.css
+++ b/css/bonnesondes.css
@@ -27,6 +27,14 @@ a:link, a:visited, #main a:link, #main2 a:link, #main a:visited, #main2 a:visite
     font-size: 0.8em;
 }
 
+.episode .description .content p {
+    margin-bottom: 0;
+}
+
+.episode .description .content, .episode .description .content p {
+    text-align: right;
+}
+
 .episode .audio h4 {
     font-size: 1.1em;
 }
