Remove prefixes in includes

--- a/_header.liquid
+++ b/_header.liquid
@@ -1,6 +1,6 @@
   <div id="banner-top">
    <div id="banner-top-box">
-    {% include 're2010/social_networks' %}
+    {% include 'social_networks' %}
     <div id="poupee-cheveux"></div>
    </div>
   </div>
