--- a/content.liquid
+++ b/content.liquid
@@ -1,6 +1,6 @@
 <html dir="ltr">
  <head>
-   {% include 're2010/head' %}
+   {% include 'head' %}
    <title>Ecouter {{content.episode.title}} - Radio Esperanzah! 2010</title>
  </head>
  <body class="content">
