--- a/episode.liquid
+++ b/episode.liquid
@@ -1,10 +1,10 @@
 <html dir="ltr">
  <head>
-   {% include 're2010/head' %}
+   {% include 'head' %}
    <title>{{ episode.title }} - Radio Esperanzah! 2010</title>
  </head>
  <body class="episode">
-  {% include 're2010/header' %}
+  {% include 'header' %}
   <div id="global">
    <div id="box">
     <div id="breadcrumb">
@@ -56,9 +56,9 @@
 			 </div>
       </div>
      <div id="right">
-      {% include 're2010/sidebar' %}
+      {% include 'sidebar' %}
      </div>
-     {% include 're2010/program' %}
+     {% include 'program' %}
     </div>
     <div id="poupee-sax"></div>
     <div id="poupee-bras"></div>
@@ -68,6 +68,6 @@
    </div>
    <div id="partners"></div>
   </div>
-  {% include 're2010/footer' %}
+  {% include 'footer' %}
  </body>
 </html>
