--- a/stream.liquid
+++ b/stream.liquid
@@ -1,10 +1,10 @@
 <html dir="ltr">
  <head>
-   {% include 're2010/head' %}
+   {% include 'head' %}
    <title>En direct - Radio Esperanzah! 2010</title>
  </head>
  <body>
-  {% include 're2010/header' %}
+  {% include 'header' %}
   <div id="global">
    <div id="box">
     <div id="breadcrumb">&nbsp;</div>
