--- a/show.liquid
+++ b/show.liquid
@@ -1,10 +1,10 @@
 <html dir="ltr">
  <head>
-   {% include 're2010/head' %}
+   {% include 'head' %}
    <title>Radio Esperanzah! 2010</title>
  </head>
  <body class="show">
-  {% include 're2010/header' %}
+  {% include 'header' %}
   <div id="global">
    <div id="box">
     <div id="breadcrumb">
@@ -28,14 +28,14 @@
 
         <h1>Ecoutez</h1>
         {% for episode in show.broadcasted_episodes limit:7 %}
-        {% include 're2010/episode' %}
+        {% include 'episode' %}
 			  {% endfor %}
 			 </div>
       </div>
      <div id="right">
-      {% include 're2010/sidebar' %}
+      {% include 'sidebar' %}
      </div>
-     {% include 're2010/program' %}
+     {% include 'program' %}
     </div>
     <div id="poupee-sax"></div>
     <div id="poupee-bras"></div>
@@ -45,6 +45,6 @@
    </div>
    <div id="partners"></div>
   </div>
-  {% include 're2010/footer' %}
+  {% include 'footer' %}
  </body>
 </html>
